--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -1,30 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>My shop</title>
-    <link rel="stylesheet" href="/css/main.css" />
+<%- include('includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/product.css" />
   </head>
 
   <body>
-    <header class="main-header">
-      <nav class="main-header__nav">
-        <ul class="main-header__item-list">
-          <li class="main-header__item"><a class="active" href="/">Shop</a></li>
-          <li class="main-header__item">
-            <a href="/admin/add-product">Add Product</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+     <%- include('includes/navigation.ejs') %>
 
     <main>
+      <% if(prods.length > 0){ %> <% for(let product of prods) { %>
       <div class="grid">
         <article class="card product-item">
           <header class="card__header">
-            <h1 class="product__title">{{this.title}}</h1>
+            <h1 class="product__title"><%= product.title %></h1>
           </header>
           <div class="card__image">
             <img
@@ -43,7 +29,8 @@
           </div>
         </article>
       </div>
+      <% } %> <% } else { %>
       <h1>No products</h1>
+      <% } %>
     </main>
-  </body>
-</html>
+  <%- include('includes/end.ejs') %>
